[package]
name = "fortress-research"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
crossbeam = "0.8"
futures = "0.3"
bytes = { version = "1.0", features = ["serde"] }
prost = "0.14"
bincode = "1.3.3"
sha2 = "0.11.0"
rand = "0.8"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
local-channel = "0.1.5"

